# cephylas

./: Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
benchmark/: docker-compose.prod.yml  package.json  pnpm-lock.yaml  run-comparison.sh  tsconfig.json
benchmark/src/: load-test.ts
core/: Cargo.toml  Dockerfile  Dockerfile.prod  README.md
core-node/: Dockerfile  index.ts  logReader.ts  package.json  pnpm-lock.yaml
core/log/: log_daily
core/src/: error.rs  log.rs  log_cache.rs  main.rs  server.rs
core/src/cephylas/: disk_info.rs
core/src/tests/: time.rs
log/: log_daily  log_daily.short
next/: .gitignore  Dockerfile.prod  README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
next/src/app/: layout.tsx  page.tsx
next/src/app/about/: page.tsx
next/src/components/: Chart.tsx  ChartSkeleton.tsx  CpuChart.tsx  Disclosure.tsx  Header.tsx  Html.tsx  IoChart.tsx  MemoryChart.tsx  NetChart.tsx
next/src/lib/: datasets.ts  downsample.ts  fetchers.ts  logReader.ts
next/src/trpc/: index.ts
src/: cephylas.rs  cpu_info.rs  disk_info.rs  main.rs  mem_info.rs  net_info.rs  time.rs
src/cephylas/: cpu_info.rs  disk_info.rs  log.rs  mem_info.rs  net_info.rs  time.rs  watch.rs
